Bug 61781 - Error bars of charts created via cell range in Calc are lost after saving and reopening
Summary: Error bars of charts created via cell range in Calc are lost after saving and...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.1.0 target:4.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-04 08:04 UTC by John Kuang
Modified: 2013-11-19 18:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
test doc saved with Y-error bars visible (12.20 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-03-04 08:04 UTC, John Kuang
Details
test doc saved with Y-error bars visible (12.20 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-03-04 08:08 UTC, John Kuang
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Kuang 2013-03-04 08:04:58 UTC
Created attachment 75882 [details]
test doc saved with Y-error bars visible

When error bars of charts are created via cell range in Calc, they disappear after saving, closing and reopening the ODS file.

The attached ODS file contains Y-error bars created using "Cell Range", and for "Parameter" I manually typed in "D7:D8" since clicking on "Select data range" doesn't do anything (Bug 60253). The bars then became visible. I saved the ODS file, and at this point uploaded the attached ODS file.

Now, when I close and open this file again, the error bars are no longer visible. And under "Format y-error bars", in place of "D7:D8", it shows as "d7:sheet1.d8". I noticed that if I change the "d7:sheet1.d8" to "sheet1.d7:sheet1.d8", then after save/close/reopen the error bars are retained.

Additionally, this bug is also probably the cause of the error bars (created using cell range) disappearing when copy and pasting the chart into Writer, Impress, Draw. If the sheet name is manually specified as described above, then error bars don't disappear after copy/paste into Writer, Impress, Draw. However, the error bar values erroneously change into the Y-values, which is probably Bug 52159.
Comment 1 John Kuang 2013-03-04 08:08:01 UTC
Created attachment 75883 [details]
test doc saved with Y-error bars visible
Comment 2 Joel Madero 2013-03-04 17:12:33 UTC
Markus - looking for your input, should this just be marked as a dupe of the other two bugs that John has reported as they seem to have a similar root cause?
Comment 3 Markus Mohrhard 2013-03-05 11:55:07 UTC
Ok, so the error here is that you used D7:D8 and that we accept it. Currently we can't support non 3D references in chart2.

You'll notice that it fails when you use it in a sheet that is not in the beginning. So if you use it in sheet2 it D7:D8 will reference sheet1 and not sheet2.
Comment 4 John Kuang 2013-03-05 17:21:07 UTC
(In reply to comment #3)
> Ok, so the error here is that you used D7:D8 and that we accept it.
> Currently we can't support non 3D references in chart2.
> 
> You'll notice that it fails when you use it in a sheet that is not in the
> beginning. So if you use it in sheet2 it D7:D8 will reference sheet1 and not
> sheet2.

I see. Since you have fixed the "select data range" (Bug 60253), it is very unlikely that users will type in a 2D reference anymore. So this bug will seldom be encountered. Thanks for looking into it!
Comment 5 Commit Notification 2013-03-06 07:00:58 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a26217815d4e69ec2485c370dfef0fbb41d6c8ab

make all chart ranges explicitly 3D refs during import/export, fdo#61781



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-03-06 07:01:17 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=47ec29ae934c82a58436bca0511117503568e907

prevent non-3D refs from being accepted in chart2, related fdo#61781



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2013-03-06 09:59:22 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=529172124be1bfcb55fca1e7be3317efa3ba0cfe&h=libreoffice-4-0

make all chart ranges explicitly 3D refs during import/export, fdo#61781


It will be available in LibreOffice 4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2013-03-06 10:20:57 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5a1c73cbf18ae5398f736d54224622b86a9bfd54&h=libreoffice-4-0

prevent non-3D refs from being accepted in chart2, related fdo#61781


It will be available in LibreOffice 4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Jorendc 2013-03-06 10:23:39 UTC
Based upon the commits and comment of Markus, I remove this from our UNCONFIRMED list and mark this as NEW.

@Markus: this is RESOLVED FIXED by those commits?

kind regards,
Joren
Comment 10 Markus Mohrhard 2013-03-06 10:39:35 UTC
Yes, non-3D references won't work anymore in chart2 now. I'm working on an experimental patch to fix all the issues around non-3D refs but this will take me some time and might actually never be in a working state.

For now I think beginning with 4.0.2 all the problems around invalid references should be gone and we reject them when you use them.