make all chart ranges explicitly 3D refs during import/export, fdo#61781

Change-Id: I66657ce38456e4a8dc3a602997c451cf1cdd983b